# lovable-ai

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
.claude/agents/: architect-reviewer.md  architect.md  backend-reviewer.md  backend.md  devops-reviewer.md  devops.md  frontend-reviewer.md  frontend.md  qa.md  reviewer.md
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py  dependencies.py  errors.py  main.py  sse.py
app/auth/: __init__.py  apple_verify.py  concurrency.py  rate_limit.py  token_service.py
app/billing/: __init__.py  adapty_client.py  entitlements.py  quota_gate.py  resync.py  subscription_state.py  subscription_sweeper.py  usage.py  webhook_handler.py
app/core/: __init__.py  config.py  ids.py  logging.py  security.py
app/db/: __init__.py  base.py  enums.py  models.py  seed.py  session.py
app/deploy/: __init__.py  docker_deploy.py  health.py  project_gc.py  rollback.py  routing.py  sandbox.py  traefik.py  workspace.py
app/notify/: __init__.py  apns_client.py  device_service.py  tasks.py  trigger.py
app/observability/: __init__.py  budget_cache.py  collector.py  exposition.py  metrics.py  redis_pool.py  sentry.py  timing.py
app/pipeline/: __init__.py  cost.py  dispatcher.py  events.py  failure_signature.py  fixing.py  graceful_fail.py  guards.py  language.py
app/schemas/: __init__.py  agent_output.py  api.py
app/services/: __init__.py  admin_service.py  answers_service.py  attachments_service.py  auth_service.py  billing_service.py  edit_service.py  project_service.py
app/storage/: __init__.py  s3.py
app/workers/: __init__.py  beat_tasks.py  celery_app.py  retry_policy.py  tasks.py
docs/: 00-vision.md  01-architecture.md  02-tech-stack.md  03-data-model.md  05-security.md  06-testing-strategy.md  07-deployment.md  08-product-decisions.md  100-known-tech-debt.md  99-open-questions.md  README.md
docs/adr/: ADR-001-state-machine-dispatcher.md  ADR-002-nginx-mount-vs-baked.md  ADR-003-celery-vs-rq.md  ADR-004-adapty-source-of-truth.md  ADR-005-no-progress-failure-signature.md  ADR-006-celery-retry-vs-domain-fixing.md  ADR-007-sign-in-with-apple.md  ADR-008-indexed-api-key-lookup.md  ADR-009-billing-idempotency-resync-grace.md  ADR-010-build-sandbox-rootless-egress.md  ADR-011-project-delete-gc.md  ADR-012-sse-realtime-transport.md  ADR-013-apns-push-from-job-events.md  ADR-014-edit-limit-revision-rollback.md  ADR-015-observability-stack.md  ADR-016-scale-topology-redis-pool.md  ADR-017-path-based-site-routing.md  ADR-018-prod-deployment-shared-traefik-cicd.md  ADR-019-reconciler-all-active-states-agent-graceful-fail.md  ADR-020-agent-structured-output-tool-use-tolerant-parse-retry.md  ADR-021-admin-plane-and-bonus-credits.md  ADR-022-per-attempt-build-logs.md  ADR-023-agent3-token-budget-thinking-room.md  ADR-024-user-id-secret-authentication.md  ADR-025-content-language-autodetect-spec-marker.md  INDEX.md  (+12 more)
infra/: Dockerfile.api  Dockerfile.worker  README.md  diag.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.qa-pgport.yml  docker-compose.qa-ports.yml  e2e_prod.sh  fmt_probe.sh
migrations/: env.py
tests/: conftest.py
(+225 files in other folders)
