[project]
name = "lovable-ai"
version = "0.1.0"
description = "Backend-сервис: промт → сгенерированный сайт → vite build → деплой за Traefik."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic==2.*",
    "pydantic-settings==2.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.30.*",
    "alembic==1.14.*",
    "celery==5.4.*",
    "redis==5.*",
    "anthropic>=0.40.0",
    "aioboto3==13.*",
    "argon2-cffi==23.*",
    "PyJWT[crypto]>=2.9",
    # Sprint 5: extra http2 обязателен для APNs (HTTP/2 POST /3/device), тянет h2
    # (docs/02-tech-stack.md §httpx, ADR-013). Прямая зависимость — extra объявлен явно.
    "httpx[http2]==0.27.*",
    # Sprint 6 (ADR-015): инструментация /metrics (app + worker/beat). Прямая зависимость
    # (docs/02-tech-stack.md §Observability, усиленное правило зависимостей S6).
    "prometheus-client>=0.20",
    # Sprint 6 (ADR-015): трейсинг исключений FastAPI(Starlette)+Celery, before_send scrubbing.
    # extra fastapi тянет Starlette-интеграцию. Пустой SENTRY_DSN → init no-op.
    "sentry-sdk[fastapi]>=2.0",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "types-redis",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501"]
# Sprint 6: token_type — это Prometheus-label метрики llm_tokens_total (input/output/
# cache_read/cache_write), НЕ секрет (S105/S106 false-positive на kwarg с именем *token*).
"app/pipeline/cost.py" = ["S105", "S106"]
# APNs device-token строки в тестах — НЕ секреты (S105/S106 false-positive на arg/var
# с именем apns_token). Тестовые модули notify используют фиктивные токены.
"tests/integration/test_devices_api.py" = ["S105", "S106"]
"tests/integration/test_apns_push.py" = ["S105", "S106"]
"tests/unit/test_apns_send.py" = ["S105", "S106"]
# Sprint 6: фикстуры скраба Sentry содержат строки с именами вида *password*/*secret*/
# *token* (database_password=..., webhook_secret=...) — это ТЕСТ-ДАННЫЕ для проверки
# before_send-маскировки, не настоящие секреты (S105/S106 false-positive).
"tests/unit/test_observability_sentry.py" = ["S105", "S106"]
# ADR-024: `secret=`-kwarg в auth-тестах по user_id+секрет — ТЕСТ-данные (фиктивный/
# сгенерированный секрет для register/login), не настоящий креденшел (S106 false-positive).
"tests/unit/test_auth_secret_service.py" = ["S105", "S106"]
"tests/integration/test_auth_secret_flow.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
